+ Added some experimental properties to mesh viewprovider
+ Allow to build up structured menus from within Python
+ StdWorkbench::setupContextMenu() implemented
+ PropertyStringList added
+ Continued implementation of property editor
+ Nullify reference to deleted object of dependent objects (Document::remObject)
+ Check if the reference is valid in Mesh::Feature::getMesh() and subclasses
+ Several bugs in Raytracing module fixed
+ API changes in DocumentPy:
  - Recompute -> recompute
  - activeFeature -> activeDocument
  - addFeature -> addObject
  - getFeature -> getObject
  - removeFeature -> removeObject
  - listFeatures -> listObjects
  - AddFeature removed
  - GetFeature removed
  - GetActiveFeature -> getActiveObject
+ API changes in Property
  - Save(Writer&) -> Save(Writer) const
+ API changes in ViewProviderDocumentObject
  - attach(App::AbstractFeature*) -> attach(App::DocumentObject*)
+ Applied patch 1470733, SetOperation patch
+ Applied patch 1470737, new module tritritest
+ Fixed bug in ViewProviderDocumentObject::ViewProviderDocumentObject(): pcPointStyle->ref()
+ Check for scheme version when loading a project file and handle the reading procedure differently
+ RFE 1470745 implemented (material mode: Open Edges)
+ show also members of DocumentObjects in Python (implemented in DocumentObjectPy::_getattr)
+ show members in MaterialPy, DocumentPy and FeaturePy
+ Fixed bugs with C++/Python framework 
  (NOTE: All C++ classes returning an associated Python object with a reference to itself must NOT return always a new instances 
         for each call but it must return the same instance, otherwise the Python objects cannot be notified when the C++ object
         has been destroyed)
+ Allow drag'n'drop for files coming from ZIP files
+ More intuitive handling of property editor

Version: V0.5B7 Date: Thu May 18 16:37:30 2006 +++++++++++++++++++++++++++++++
+ added spins to edit line width and point size in display dialog